--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ h1 {
     align-items: center;
     font-size: 30px;
     font-weight: bold;
+    border-radius: 10px;
 }
 .key.active {
     border: 2px solid #FF0;
@@ -47,6 +48,7 @@ h1 {
     outline: none;
     font-size: 17px;
     padding: 10px 15px;
+    border-radius: 10px;
 }
 .composer button {
     width: 100%;
@@ -57,6 +59,7 @@ h1 {
     font-size: 16px;
     margin-top: 10px;
     cursor: pointer;
+    border-radius: 10px;
 }
 .composer button:hover {
     background-color: rgba(0, 0, 0, 0.2);
@@ -66,4 +69,8 @@ footer {
     margin-top: 20px;
     color: #ccc;
     font-size: 13px;
+}
+
+.a {
+    color: #FFF;
 }
